@@ -7,6 +7,7 @@ Key:
   - Removal
 
 Version 1.1.3 | Tested on CB 1.4.7-R1.0 & 1.5.0-R0.1
+ + Added permission nodes which limit the maximum amount of Soulbound items a player can carry at once
  = Fixed bug which caused the plugin to ignore cancelled SoulbindItemEvents
 
 Version 1.1.2 | Tested on CB 1.4.7-R1.0 & 1.5.0-R0.1
